# Optional dependencies
option('valadoc', type: 'boolean', value : 'true',
	description : 'Enable build of libvaladoc and valadoc')

# Documentation
option('documentation', type: 'boolean', value: 'false',
	description : 'Build API reference and tools documentation')
option('man-pages', type: 'boolean', value: 'false',
	description : 'Build man pages for installed tools')

# Resource directories
option('girdir', type: 'string', value: '',
	description : 'Directory to use GIRs from')

# Enable bootstrap
option ('bootstrap', type: 'boolean', value: 'false',
	description: 'Build Vala using existing C files')
